# StudentDatabase

./: .gitignore  .travis.yml  Address.cpp  Address.hpp  CMakeLists.txt  Database.cpp  Database.hpp  Employee.cpp  Employee.hpp  Makefile  Person.cpp  Person.hpp  README.md  Student.cpp  Student.hpp  dataBase.cpp  dataBase.h  dataBase.hpp  main.cpp
.circleci/: config.yml
inc/: Database.hpp  Employee.hpp  Person.hpp  Student.hpp  ownException.hpp
source/: CMakeLists.txt  Employee.cpp  Employee.hpp  Person.cpp  main.cpp
src/: Database.cpp  Employee.cpp  Person.cpp  Student.cpp  main.cpp
tests/: CMakeLists.txt  StudentDatabase.test.cpp  personTest.cpp  test_main.cpp
